--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: black;
 }
 
 /* Align Left Grid and Right */
@@ -36,11 +37,11 @@ body {
   flex-direction: row;
   justify-content: center;
   width: 100%;
-  height: 30px;
+  height: 25px;
 }
 
 .grid-cell {
-  width: 30px;
+  width: 25px;
   border: 1px solid rgb(161, 156, 156);
 }
 
