--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,3 @@
-
-
 * {
   box-sizing: border-box;
 }
@@ -42,12 +40,25 @@ body {
 
 .grid-cell {
   width: 25px;
-  border: 1px solid rgb(161, 156, 156);
+  /* border: 1px solid rgb(161, 156, 156); */
 }
 
 
 
 /* Falling Shape */
+.active,.filled {
+  transform:
+    perspective(75em)
+    rotateX(18deg);
+    box-shadow:
+    rgba(22, 31, 39, 0.42) 0px 60px 123px -25px,
+    rgba(19, 26, 32, 0.08) 0px 35px 75px -35px;
+  border-radius: 10px;
+  border: 1px solid;
+  border-color:
+    rgb(80, 80, 80);
+}
+
 .active.red {
   background-color: red;
 }
