--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,7 +8,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: black;
+  background-color: #01465f;
 }
 
 /* Align Left Grid and Right */
@@ -21,6 +21,25 @@ body {
   width: auto;
 }
 
+.right-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  height: 100%;
+  padding-top: 130px;
+  margin-left: 20px;
+}
+
+#next-shapes-overlay {
+  background-color: rgba(0,0,0,0.5);
+  border-radius: 10px;
+}
+
+.next-shapes {
+  border-radius: 10px;
+}
+
+
 .grid {
   display: flex;
   flex-direction: column;
@@ -28,6 +47,7 @@ body {
   align-items: center;
   justify-content: center;
   box-sizing: content-box;
+  border-radius: 10px;
 }
 
 .grid-row {
@@ -35,71 +55,85 @@ body {
   flex-direction: row;
   justify-content: center;
   width: 100%;
-  height: 25px;
+  height: 30px;
 }
 
 .grid-cell {
-  width: 25px;
+  width: 30px;
   /* border: 1px solid rgb(161, 156, 156); */
 }
+
+/* CONTROL BUTTONS */
+.controls-wrapper {
+  display: flex;
+  margin: 20px 0;
+  justify-content: center;
+}
+
+.controls-btn {
+  padding: 10px 15px;
+  background-color: transparent;
+  color: white;
+  border: 2px solid white;
+  border-radius: 10px;
+}
+
+
+/* NEXT SHAPES */
+.next-shapes-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  height: 15px;
+}
+.next-shapes-cell {
+  width: 15px;
+}
+
 
 
 
 /* Falling Shape */
 .active,.filled {
-  transform:
-    perspective(75em)
-    rotateX(18deg);
-    box-shadow:
-    rgba(22, 31, 39, 0.42) 0px 60px 123px -25px,
-    rgba(19, 26, 32, 0.08) 0px 35px 75px -35px;
-  border-radius: 10px;
-  border: 1px solid;
-  border-color:
-    rgb(80, 80, 80);
+   border-radius: 50px;
 }
 
 .active.red {
-  background-color: red;
+  background-color: #C70039;
 }
-.active.blue {
-  background-color: blue;
+.active.grey {
+  background-color: #D2D2D2;
 }
 .active.green {
-  background-color: green;
+  background-color: #DAF7A6;
 }
 .active.orange {
-  background-color: orange;
+  background-color: #FF5733;
 }
 .active.purple {
-  background-color: purple;
+  background-color: #87077B;
 }
 
 .filled.red {
-  background-color: red;
+  background-color: #C70039;
 }
-.filled.blue {
-  background-color: blue;
+.filled.grey {
+  background-color: #D2D2D2;
 }
 .filled.green {
-  background-color: green;
+  background-color: #DAF7A6;
 }
 .filled.orange {
-  background-color: orange;
+  background-color: #FF5733;
 }
 .filled.purple {
-  background-color: purple;
+  background-color: #87077B;
 }
 
-
-/* .main-grid-cell {
-  display: flex;
-  flex-wrap: wrap;
-  width: 10%;
-  height: 30px;
-  border: 1px solid black;
-  padding: 5px;
-} */
+.animated {
+  background-color: black;
+}
 
 
 
