--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,15 +11,38 @@ body {
   background-color: #01465f;
 }
 
+header {
+  height: 180px;
+  margin-bottom: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+header img {
+  height: 150px;
+}
+
+main {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  height: 710px;
+}
+
 /* Align Left Grid and Right */
 .main-wrapper {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
-  height: 100vh;
+  align-items: flex-start;
   width: auto;
+  height: 100%;
 }
+/* .cen */
+
 .grid {
   display: flex;
   flex-direction: column;
@@ -41,6 +64,18 @@ body {
 .grid-cell {
   width: 30px;
   /* border: 1px solid rgb(161, 156, 156); */
+}
+
+.grid-text-overlay {
+  position: fixed;
+  margin: 100px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 308px;
+  font-size: 120px;
+  color: white;
 }
 
 /* CONTROL BUTTONS */
@@ -65,8 +100,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  height: 100%;
-  padding-top: 120px;
   margin-left: 20px;
 }
 
@@ -81,7 +114,6 @@ body {
 }
 
 #next-shapes-overlay {
-  background-color: rgba(0,0,0,0.5);
   border-radius: 10px;
 }
 
@@ -94,10 +126,10 @@ body {
   flex-direction: row;
   justify-content: center;
   width: 100%;
-  height: 15px;
+  height: 20px;
 }
 .next-shapes-cell {
-  width: 15px;
+  width: 20px;
 }
 
 
