--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700;800&display=swap');
+
 * {
   box-sizing: border-box;
+  font-family: 'Nunito', sans-serif;
 }
 
 body {
@@ -78,8 +81,8 @@ main {
   color: white;
 }
 
-/* CONTROL BUTTONS */
-.controls-wrapper {
+/* BUTTONS */
+.buttons-wrapper {
   display: flex;
   margin: 20px 0;
   justify-content: center;
@@ -98,8 +101,10 @@ main {
 .left-wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-between;
   margin-right: 20px;
+  width: 150px;
+  height: 620px;
 }
 #highscore-title {
   text-align: center;
@@ -114,12 +119,38 @@ main {
   margin: 10px 0;
 }
 
+/* GAME CONTROLS */
+.controls-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+#controls-title {
+  text-align: center;
+  color: white;
+  margin: 10px;
+}
+
+.controls-img {
+  width: 80px;
+}
+
+.controls-action {
+  text-align: center;
+  color: white;
+  margin: 0 0 10px 0;
+}
+
 /* NEXT SHAPES */
 .right-wrapper {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   margin-left: 20px;
+  width: 150px;
 }
 
 .next-shapes-wrapper {
@@ -130,6 +161,7 @@ main {
 #next-shapes-title {
   color: white;
   margin: 10px;
+  text-align: center;
 }
 
 #next-shapes-overlay {
@@ -138,6 +170,7 @@ main {
 
 .next-shapes {
   border-radius: 10px;
+
 }
 
 .next-shapes-row {
